--- a/03-visIelement.html
+++ b/03-visIelement.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Øvelse 3</title>
   </head>
   <body>
     <article id="dyr">
       <h3></h3>
-      <p></p>
+
       <img src="" alt="" />
+      <p>Type:</p>
+      <p>Levested:</p>
     </article>
     <script>
       const dyr = {
@@ -27,9 +29,12 @@
       window.addEventListener("DOMContentLoaded", viSiden);
       function viSiden() {
         const destination = document.querySelector("#dyr");
+
         destination.querySelector("h3").textContent = dyr.navn;
-        destination.querySelector("p").textContent =
-          "Type: " + dyr.type + "Levested: " + dyr.levested;
+        destination.querySelector("p:first-of-type").textContent =
+          "Type:" + dyr.type;
+        destination.querySelector("p:last-of-type").textContent =
+          "Levested:" + dyr.levested;
         destination.querySelector("img").src = dyr.billede;
       }
     </script>
