--- a/01-objekt.html
+++ b/01-objekt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Øvelse 1</title>
   </head>
   <body>
     <article id="dyr">
@@ -19,6 +19,7 @@
         billede: "http://mabe-kea.dk/E19/pics/pig.png",
         levested: "svinefarme",
       };
+      console.log(dyr);
 
       console.log(
         `dyr:${dyr.dyr}, type:${dyr.type}, levested:${dyr.levested}.`
